--- a/add-clients.html
+++ b/add-clients.html
@@ -13,6 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
     <script src="./assets/js/firebase.js"></script>
+    <script src="./assets/js/add_clients.js"></script>
   </head>
   <body>
 
@@ -76,8 +77,9 @@
                       <label>Status</label>
                       <input type="text" class="form-control" id="status" placeholder="ON/OFF">
                     </div>
-                    <button class="mt-3 btn btn-primary">Add Client</button>
+                    
                 </form>
+                <button class="mt-3 btn btn-primary" onclick="addClient()">Add Client</button>
             </div>
         </div>
     </div>
