--- a/login.html
+++ b/login.html
@@ -1,20 +1,43 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Login Page</title>
-        <!-- Firebase JS -->
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="./assets/vendor/bootstrap/bootstrap.css" rel="stylesheet">
+    <title>Project Angel - Dashboard</title>
+
+    <!-- Firebase JS -->
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
     <script src="./assets/js/firebase.js"></script>
     <script src="./assets/js/auth.js"></script>
-    </head>
-    <body>
-        <form>
-            <input type="email" id="email" placeholder="Enter Email">
-            <input type="password" id="password" placeholder="Enter Password">
-        </form>
-        <button onclick="login()">Login</button>
-        <button onclick="signout()">Signout</button>
-    </body>
+  </head>
+  <body>
+    <div class="container my-4">
+        <div class="card">
+            <div class="card-header">
+                <h3>Login</h3>
+            </div>
+            <div class="card-body">
+                <form>
+                    <div class="form-group mb-2">
+                        <label>Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                    </div>
+                    <div class="form-group mb-2">
+                        <label>Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Enter password">
+                    </div>
+                    <button class="mt-3 btn btn-primary" onclick="login()">Login</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+  </body>
+  <!-- Bootstrap JS-->
+  <script src="./assets/vendor/bootstrap/bootstrap.js" ></script>
 </html>
