--- a/add-clients.html
+++ b/add-clients.html
@@ -14,6 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
     <script src="./assets/js/firebase.js"></script>
     <script src="./assets/js/add_clients.js"></script>
+    <script src="./assets/js/auth.js"></script>
   </head>
   <body>
 
@@ -32,6 +33,7 @@
                 </ul>
                 <div class="d-flex">
                     <a class="btn btn-warning" href="profile.html">Profile</a>
+                    <span class="btn btn-warning" style="margin-left: 10px;" onclick="signout()">SignOut</span>
                 </div>
             </div>
         </div>
@@ -74,8 +76,11 @@
                         <input type="number" class="form-control" id="multiplier" placeholder="1" value="1">
                     </div>
                     <div class="form-group mb-2">
-                      <label>Status</label>
-                      <input type="text" class="form-control" id="status" placeholder="ON/OFF">
+                        <label for="status">Status</label>
+                        <select class="form-control" id="status">
+                          <option>ON</option>
+                          <option>OFF</option>
+                        </select>
                     </div>
                     
                 </form>
