--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./assets/js/firebase.js"></script>
     <script src="./assets/js/auth.js"></script>
+    <script src="./assets/js/index.js"></script>
   </head>
   <body>
 
@@ -40,50 +42,33 @@
     <!-- Navbar Ends -->
 
     <div class="container my-4">
-        <h1 class="mb-4">Hello, Kapil!</h1>
-        <table class="table table-striped table-hover table-bordered" id="clientTable">
-            <thead class="table-dark">
-              <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Username</th>
-                <th scope="col">Password</th>
-                <th scope="col">Category</th>
-                <th scope="col">Multiplier</th>
-                <th scope="col">Status</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-                <td>NFO</td>
-                <td>2</td>
-                <td>ON</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-                <td>NSE</td>
-                <td>0.5</td>
-                <td>ON</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry the Bird</td>
-                <td>Mark</td>
-                <td>@twitter</td>
-                <td>All</td>
-                <td>5</td>
-                <td>ON</td>
-              </tr>
-            </tbody>
-        </table>
-    </div>
+      <h1 class="mb-4">Hello, Kapil!</h1>
+      <table class="table table-striped table-hover table-bordered" id="clientTable">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Name</th>
+              <th scope="col">Username</th>
+              <th scope="col">Password</th>
+              <th scope="col">Category</th>
+              <th scope="col">Multiplier</th>
+              <th scope="col">Status</th>
+              <th scope="col">Edit</th>
+              <th scope="col">Delete</th>
+            </tr>
+          </thead>
+          <tbody id="clientDetails">
+            <tr>
+              <td></td>
+              <td></td>
+              <td>Loading</td>
+              <td>Clients</td>
+              <td>Details</td>
+              <td></td>
+            </tr>
+          </tbody>
+      </table>
+  </div>
 
   </body>
   <!-- Bootstrap JS-->
