--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./assets/js/firebase.js"></script>
     <script src="./assets/js/auth.js"></script>
     <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/add_clients.js"></script>
   </head>
   <body>
 
@@ -68,6 +69,9 @@
             </tr>
           </tbody>
       </table>
+  </div>
+  <div>
+    <button onclick="deleteClient()">Test</button>
   </div>
 
   </body>
