--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="./assets/js/firebase.js"></script>
     <script src="./assets/js/auth.js"></script>
     <script src="./assets/js/index.js"></script>
-    <script src="./assets/js/add_clients.js"></script>
+    <script src="./assets/js/client.js"></script>
   </head>
   <body>
 
@@ -69,9 +69,6 @@
             </tr>
           </tbody>
       </table>
-  </div>
-  <div>
-    <button onclick="deleteClient()">Test</button>
   </div>
 
   </body>
