--- a/add-clients.html
+++ b/add-clients.html
@@ -13,7 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
     <script src="./assets/js/firebase.js"></script>
-    <script src="./assets/js/add_clients.js"></script>
+    <script src="./assets/js/client.js"></script>
     <script src="./assets/js/auth.js"></script>
   </head>
   <body>
