--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="./assets/vendor/bootstrap/bootstrap.css" rel="stylesheet">
-    <title>Project Angel - Dashboard</title>
+    <title>Project Angel - Profile</title>
 
     <!-- Firebase JS -->
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
@@ -14,6 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
     <script src="./assets/js/firebase.js"></script>
     <script src="./assets/js/auth.js"></script>
+    <script src="./assets/js/profile.js"></script>
   </head>
   <body>
 
@@ -32,6 +33,7 @@
                 </ul>
                 <div class="d-flex">
                     <a class="btn btn-warning" href="profile.html">Profile</a>
+                    <span class="btn btn-warning" style="margin-left: 10px;" onclick="signout()">SignOut</span>
                 </div>
             </div>
         </div>
@@ -41,27 +43,53 @@
     <div class="container my-4">
         <div class="card">
             <div class="card-header">
-                <h3>Change Password</h3>
+                <h4>Firebase Credentials</h4>
+            </div>
+            <div class="card-body">
+                <form>
+                    <div class="form-group mb-2">
+                        <label>Email</label>
+                        <input type="text" class="form-control" id="fbEmail">
+                    </div>
+                    <div class="form-group mb-2">
+                        <label>Current Password</label>
+                        <input type="text" class="form-control" id="fbCurrentPassword">
+                    </div>
+                    <div class="form-group mb-2">
+                        <label>New Password</label>
+                        <input type="text" class="form-control" id="fbPassword">
+                    </div>
+                    <div class="form-group mb-2">
+                        <label>Confirm Password</label>
+                        <input type="text" class="form-control" id="fbPassword2">
+                    </div>
+                </form>
+                <button class="mt-3 btn btn-primary" onclick="updateFirebaseDetails()">Update Password</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <h4>Angel Broking Credentials</h4>
             </div>
             <div class="card-body">
                 <form>
                     <div class="form-group mb-2">
                         <label>Username</label>
-                        <input type="text" class="form-control" id="username" placeholder="AB12345">
+                        <input type="text" class="form-control" id="abUsername" >
                     </div>
                     <div class="form-group mb-2">
                         <label>Current Password</label>
-                        <input type="password" class="form-control" id="current_password">
+                        <input type="password" class="form-control" id="abCurrentPassword">
                     </div>
                     <div class="form-group mb-2">
                         <label>New Password</label>
-                        <input type="password" class="form-control" id="password">
+                        <input type="text" class="form-control" id="abPassword">
                     </div>
                     <div class="form-group mb-2">
                         <label>Confirm Password</label>
-                        <input type="password" class="form-control" id="password2">
+                        <input type="text" class="form-control" id="abPassword2">
                     </div>
-                    <button class="mt-3 btn btn-primary">Update Password</button>
+                    <button id="abButton" class="mt-3 btn btn-primary" onclick="updateAngelBrokingDetails()">Update Password</button>
                 </form>
             </div>
         </div>
