--- a/profile.html
+++ b/profile.html
@@ -1,101 +1,100 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link href="./assets/vendor/bootstrap/bootstrap.css" rel="stylesheet">
-    <title>Project Angel - Profile</title>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap CSS -->
+        <link href="./assets/vendor/bootstrap/bootstrap.css" rel="stylesheet">
+        <title>Project Angel - Profile</title>
+    </head>
+    <body>
 
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Project Angel</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="add-clients.html">Add Clients</a></li>
+                        <li class="nav-item"><a class="nav-link" href="results.html">Results</a></li>
+                    </ul>
+                    <div class="d-flex">
+                        <a class="btn btn-warning" href="profile.html">Profile</a>
+                        <span class="btn btn-warning" style="margin-left: 10px;" onclick="signout()">SignOut</span>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- Navbar Ends -->
+
+        <div class="container my-4">
+            <div class="card">
+                <div class="card-header">
+                    <h4>Firebase Credentials</h4>
+                </div>
+                <div class="card-body">
+                    <form onsubmit="event.preventDefault(); updateFirebaseDetails()">
+                        <div class="form-group mb-2">
+                            <label>Email</label>
+                            <input type="text" class="form-control" id="fbEmail">
+                        </div>
+                        <div class="form-group mb-2">
+                            <label>Current Password</label>
+                            <input type="text" class="form-control" id="fbCurrentPassword">
+                        </div>
+                        <div class="form-group mb-2">
+                            <label>New Password</label>
+                            <input type="text" class="form-control" id="fbPassword">
+                        </div>
+                        <div class="form-group mb-2">
+                            <label>Confirm Password</label>
+                            <input type="text" class="form-control" id="fbPassword2">
+                        </div>
+                        <button id="fbBtn" type="submit" class="mt-3 btn btn-primary">Update Password</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="card mt-4">
+                <div class="card-header">
+                    <h4>Angel Broking Credentials</h4>
+                </div>
+                <div class="card-body" onsubmit="event.preventDefault(); updateAngelBrokingDetails()">
+                    <form>
+                        <div class="form-group mb-2">
+                            <label>Username</label>
+                            <input type="text" class="form-control" id="abUsername" >
+                        </div>
+                        <div class="form-group mb-2">
+                            <label>Current Password</label>
+                            <input type="password" class="form-control" id="abCurrentPassword">
+                        </div>
+                        <div class="form-group mb-2">
+                            <label>New Password</label>
+                            <input type="text" class="form-control" id="abPassword">
+                        </div>
+                        <div class="form-group mb-2">
+                            <label>Confirm Password</label>
+                            <input type="text" class="form-control" id="abPassword2">
+                        </div>
+                        <button id="abBtn" type="submit" class="mt-3 btn btn-primary">Update Password</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+    </body>
+    <!-- Bootstrap JS-->
+    <script src="./assets/vendor/bootstrap/bootstrap.js" ></script>
     <!-- Firebase JS -->
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
-    <script src="./assets/js/firebase.js"></script>
     <script src="./assets/js/auth.js"></script>
     <script src="./assets/js/profile.js"></script>
-  </head>
-  <body>
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Project Angel</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="add-clients.html">Add Clients</a></li>
-                    <li class="nav-item"><a class="nav-link" href="results.html">Results</a></li>
-                </ul>
-                <div class="d-flex">
-                    <a class="btn btn-warning" href="profile.html">Profile</a>
-                    <span class="btn btn-warning" style="margin-left: 10px;" onclick="signout()">SignOut</span>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <!-- Navbar Ends -->
-
-    <div class="container my-4">
-        <div class="card">
-            <div class="card-header">
-                <h4>Firebase Credentials</h4>
-            </div>
-            <div class="card-body">
-                <form>
-                    <div class="form-group mb-2">
-                        <label>Email</label>
-                        <input type="text" class="form-control" id="fbEmail">
-                    </div>
-                    <div class="form-group mb-2">
-                        <label>Current Password</label>
-                        <input type="text" class="form-control" id="fbCurrentPassword">
-                    </div>
-                    <div class="form-group mb-2">
-                        <label>New Password</label>
-                        <input type="text" class="form-control" id="fbPassword">
-                    </div>
-                    <div class="form-group mb-2">
-                        <label>Confirm Password</label>
-                        <input type="text" class="form-control" id="fbPassword2">
-                    </div>
-                </form>
-                <button class="mt-3 btn btn-primary" onclick="updateFirebaseDetails()">Update Password</button>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-header">
-                <h4>Angel Broking Credentials</h4>
-            </div>
-            <div class="card-body">
-                <form>
-                    <div class="form-group mb-2">
-                        <label>Username</label>
-                        <input type="text" class="form-control" id="abUsername" >
-                    </div>
-                    <div class="form-group mb-2">
-                        <label>Current Password</label>
-                        <input type="password" class="form-control" id="abCurrentPassword">
-                    </div>
-                    <div class="form-group mb-2">
-                        <label>New Password</label>
-                        <input type="text" class="form-control" id="abPassword">
-                    </div>
-                    <div class="form-group mb-2">
-                        <label>Confirm Password</label>
-                        <input type="text" class="form-control" id="abPassword2">
-                    </div>
-                    <button id="abButton" class="mt-3 btn btn-primary" onclick="updateAngelBrokingDetails()">Update Password</button>
-                </form>
-            </div>
-        </div>
-    </div>
-
-  </body>
-  <!-- Bootstrap JS-->
-  <script src="./assets/vendor/bootstrap/bootstrap.js" ></script>
 </html>
