--- a/results.html
+++ b/results.html
@@ -12,7 +12,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
-    <script src="./assets/js/firebase.js"></script>
+    <script src="./assets/js/auth.js"></script>
   </head>
   <body>
 
@@ -31,6 +31,7 @@
                 </ul>
                 <div class="d-flex">
                     <a class="btn btn-warning" href="profile.html">Profile</a>
+                    <span class="btn btn-warning" style="margin-left: 10px;" onclick="signout()">SignOut</span>
                 </div>
             </div>
         </div>
