--- a/add-clients.html
+++ b/add-clients.html
@@ -6,13 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="./assets/vendor/bootstrap/bootstrap.css" rel="stylesheet">
-    <title>Project Angel - Dashboard</title>
-
-    <!-- Firebase JS -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
-    <script src="./assets/js/firebase.js"></script>
+    <title>Project Angel - Add Clients</title>
   </head>
   <body>
 
@@ -31,6 +25,7 @@
                 </ul>
                 <div class="d-flex">
                     <a class="btn btn-warning" href="profile.html">Profile</a>
+                    <span class="btn btn-warning" style="margin-left: 10px;" onclick="signout()">SignOut</span>
                 </div>
             </div>
         </div>
@@ -73,11 +68,15 @@
                         <input type="number" class="form-control" id="multiplier" placeholder="1" value="1">
                     </div>
                     <div class="form-group mb-2">
-                      <label>Status</label>
-                      <input type="text" class="form-control" id="status" placeholder="ON/OFF">
+                        <label for="status">Status</label>
+                        <select class="form-control" id="status">
+                          <option>ON</option>
+                          <option>OFF</option>
+                        </select>
                     </div>
-                    <button class="mt-3 btn btn-primary">Add Client</button>
+                    
                 </form>
+                <button class="mt-3 btn btn-primary" onclick="addClient()">Add Client</button>
             </div>
         </div>
     </div>
@@ -85,4 +84,10 @@
   </body>
   <!-- Bootstrap JS-->
   <script src="./assets/vendor/bootstrap/bootstrap.js" ></script>
+  <!-- Firebase JS -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
+  <script src="./assets/js/client.js"></script>
+  <script src="./assets/js/auth.js"></script>
 </html>
