--- a/profile.html
+++ b/profile.html
@@ -71,12 +71,8 @@
                             <input type="text" class="form-control" id="abUsername" >
                         </div>
                         <div class="form-group mb-2">
-                            <label>Current Password</label>
-                            <input type="password" class="form-control" id="abCurrentPassword">
-                        </div>
-                        <div class="form-group mb-2">
                             <label>New Password</label>
-                            <input type="text" class="form-control" id="abPassword">
+                            <input type="password" class="form-control" id="abPassword">
                         </div>
                         <div class="form-group mb-2">
                             <label>Confirm Password</label>
