--- a/add-clients.html
+++ b/add-clients.html
@@ -53,13 +53,12 @@
                     </div>
                     <div class="form-group mb-2">
                         <label>Confirm Password</label>
-                        <input type="password" class="form-control" id="password2">
+                        <input type="text" class="form-control" id="password2">
                     </div>
                     <div class="form-group mb-2">
                       <label>Market Category</label>
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="NSE" id="NSE">
-                        <!-- onclick="myFunction(NSE)"" -->
                         <label class="form-check-label" for="flexCheckChecked">NSE</label>
                       </div>
                       <div class="form-check">
